# CSE

./: .classpath  .gitignore  CMakeLists.txt  Eyad Ghanem Portfolio.docx
src/y1/s1/assignments/: Assignment 11 (1).docx  Assignment 6 Methods.docx  Assignment 8.docx  Assignment Arrays.docx  Lecture  2-.rtf  Lecture  4-.rtf  LoopsANS.docx
src/y1/s1/labs/: Lab 1.pptx  Lab 3-2.docx  Lab 3.pptx
src/y1/s1/lecs/: L6 - Pre-Defined Methods.pptx  L6 - User-defined Methods - Passing Parameters.pptx  L6 - User-defined Methods - Scope.pptx  L6 - User-defined methods - value-returning.pptx  l4q.txt
src/y1/s1/self_practicing_code/chapter_03/: Questions.docx
src/y1/s2/Modules/Module0/: _0_KnowledgeCheck.java
src/y1/s2/Modules/Module1/: Topics_and_learning_objectives.txt
src/y1/s2/Modules/Module2/: Topics_and_learning_objectives.txt
src/y1/s2/Modules/Module3/: Topics_and_learning_objectives.txt
src/y1/s2/Modules/Module4/: Topics_and_learning_objectives.txt  _4_KnowledgeCheck.java
src/y1/s2/Modules/Module5/: BogoSorter.java  ComparableInterface.java  SortingDemo.java
src/y1/s2/Modules/Module7/: Topics_and_learning_objectives.txt
src/y1/s2/Modules/ModuleFinalExam/: Final Review - SB20.pptx
src/y1/s2/Quizzes/: Quiz0.java  extra_credit_quiz.txt
src/y1/s2/Quizzes/Quiz1_2_19/: Cat.java  Main.java  Mammal.java  Pet.java
src/y1/s2/Quizzes/Quiz1_2_20/: A.java  B.java  C.java  Main.java
src/y1/s2/Sections/JavaPrograms/: Add.java  ArrayAverage.java  ArrayCalculator.java  Calculator.java  Factorial.java  Fibonacci.java  NumberReverse.java  PowerCalculator.java  RightTriangleStarPattern.java  Transpose.java  UpperCaseAlphabet.java
src/y2/s1/: Main.java  OverflowExample.java
src/y2/s1/canv_assignments/module2/: Making Circuits of Boolean Algebra Properties - Solution.circ
src/y2/s1/canv_assignments/module3/: SER232-Assignment3-Template.circ
src/y2/s1/canv_assignments/module7/: SER232-Assignment7-Template.circ
src/y2/s1/canv_lectures/module6/: SER232_6 - FSM Online Session Solution.pptx  SER232_6 - FSM Online Session Solution.xlsx
src/y2/s1/lessons/: Booleans.java  LogicGates.java
src/y2/s1/priv_lessons/: 3_BIT_COUNTER.cct  LogicGates.java
src/y2/s1/project/: 2C_INC_4.bak  2C_INC_4.cct  FA_4.cct  INC_4.bak  INC_4.cct  project.doc
src/y2/s1/project/LTools/: 1_8_INC_4.cct  2_21_MUX_4.cct  3_2_NOT_NEG.cct  3_7_ALU.cct  ALU.cct  DECODER_1.cct  DECODER_2.bak  DECODER_2.cct  DECODER_2×4.cct  FA_1_nor.cct  HA_1.bak  HA_1.cct  MUX4.bak  MUX4.cct  MUX_1.bak  MUX_1.cct  MUX_4.cct  My library.clf  NOT_NEG.cct  XOR_ADD.cct
src/y2/s1/software/software/: Welcome.htm  Welcome.txt
src/y2/s1/univ_homeworks/: Homework1_sol.docx  Homework3_sol.docx  Homework4_sol.docx  Homework5_sol.docx  Homework7_sol - Copy.docx  Homework8 2nd_sol.docx  Homework8_sol.docx
src/y2/s1/univ_lectures/: Lecture 10_232_umar.ppt  Lecture 11_232.ppt  Lecture 4_232.ppt  Lecture 5_232.ppt  Lecture 6.ppt  Lecture 6_232.ppt  Lecture 6_232_comnt.ppt  Lecture 7_232.ppt  Lecture 7_232_comnt.ppt  Lecture 8_232.ppt  Lecture 9_232.ppt  Lecture 9_232_umar.ppt
src/y2/s2/cptr_org_asm/project/: 1_5_HA_1.cct  2_13_FA_1.cct  3_7_ALU_TESTING.cct  4_11_4-bit ROM memory cell.cct  5_13_The complete microprocessor circuit.cct  5_2_Schematic of brainless microprocessor showing added memory.cct  5_5_Schematic of brainless microprocessor emphasizing memory-address-generation circuitry.cct  cptr_org_project.docx
src/y2/s2/cptr_org_asm/univ/: Assignment 1_sol.docx  Assignment 2_sol.docx  Assignment 7_sol.doc  Assignment 8_sol.doc  Homework 1_sol.docx  Lecture 1_cse230.ppt  Lecture 2_cse230.ppt  Lecture 4_230.ppt  Tasks in Labs of cse 230 spring 2024.docx
src/y2/s2/sftw_entr/: Main.java
src/y3/s1/: Main.java
src/y3/s1/cse222/: CSE222_Revision.docx  ~$E222_Revision.docx
src/y3/s1/cse240/: CSE240_Revision.docx  main.cpp  main.pl  revision_midterm.cpp
src/y3/s1/cse240/gpt/: revision1.cpp
src/y3/s1/cse240/lecs/: _1_input_output_example.cpp  _2_scope_resoultion_operator.cpp  _3_static_example1.cpp  _4_static_example2.cpp  _5_constructor_destrcutor.cpp  _6_delete.cpp  _7_inheritance_example1.cpp
src/y3/s1/cse240/project/: Customer.java  bank_account.h  customer.h  project.docx  project.rar  test.cpp
src/y3/s1/cse240/refs/: 1_3_1 Data types and type equivalence.c  1_3_2 Type checking and type conversion.c  chapter1.txt
src/y3/s2/aie111/: 05_TestMain.ipynb  08_DFS.ipynb  10_Lab 4 and 5.pptx  11_Depth First Search (DFS) Algorithm(ai).pptx  14_List of AIE111.xlsx  17_Assign 3.docx  21_Project Template-2.docx  24_List of students .xlsx  file.txt  main.py
src/y3/s2/aie111/04_Simple reflex vacuum cleaner/: MyClass.py
src/y3/s2/aie111/06_Lecture 3/: main.py
src/y3/s2/aie111/dr_noha/: MCQ - Lec1,2.docx  MCQ - Lec3,4.docx  MCQ - Lec3.docx  MCQ - Lec4.docx  MCQ - Lec5.docx  MCQ - Lec6.docx  PROBLEMS - All Lecs.docx  lec1lec2.docx  (+7 more)
src/y3/s2/ser316/: .classpath  .project
(+809 files in other folders)
