cmake_minimum_required(VERSION 3.29)
project(CSE C)

set(CMAKE_C_STANDARD 11)

add_executable(CSE
        #    "out/production/CSE/y3/s1/cse240/refs/1.3.3 Orthogonality.c"
        #    "out/production/CSE/y3/s1/cse240/refs/1_3_1 Data types and type equivalence.c"
        #    "out/production/CSE/y3/s1/cse240/refs/1_3_2 Type checking and type conversion.c"
        #                src/y3/s1/cse240/lecs/lec05/lec05.c
        #        src/y3/s1/cse240/lecs/lec06/lec06.c
        src/y3/s1/cse240/lecs/lec07/lec07.c
        #        src/y3/s1/cse240/lecs/lec03/lec03.c
        #        src/y3/s1/cse240/lecs/lec08/lec08.c
        #    "src/y3/s1/cse240/refs/1.3.3 Orthogonality.c"
        #    "src/y3/s1/cse240/refs/1_3_1 Data types and type equivalence.c"
        #    "src/y3/s1/cse240/refs/1_3_2 Type checking and type conversion.c"
)
