cmake_minimum_required(VERSION 3.29)
project(CSE)

set(CMAKE_C_STANDARD 11)

add_executable(CSE
        #    "out/production/CSE/y3/s1/cse240/refs/1.3.3 Orthogonality.c"
        #    "out/production/CSE/y3/s1/cse240/refs/1_3_1 Data types and type equivalence.c"
        #    "out/production/CSE/y3/s1/cse240/refs/1_3_2 Type checking and type conversion.c"
        #                src/y3/s1/cse240/lecs/lec05/lec05.c
        #        src/y3/s1/cse240/lecs/lec06/lec06.c
        #        src/y3/s1/cse240/lecs/lec07/lec07.c
        #        src/y3/s1/cse240/lecs/lec03/lec03.c
        #                src/y3/s1/cse240/lecs/lec08/lec08.c
        #        src/y3/s1/cse240/lecs/lec09/lec09.cpp
        #        src/y3/s1/cse240/main.cpp
        #        src/y3/s1/cse240/lecs/_3_static_example1.cpp
        #        src/y3/s1/cse240/lecs/_4_static_example2.cpp
        #        src/y3/s1/cse240/lecs/_5_constructor_destrcutor.cpp
        #        src/y3/s1/cse240/lecs/_6_delete.cpp
        src/y3/s1/cse240/gpt/revision1.cpp
        #        src/y3/s1/cse240/lecs/lec09/_2_scope_resoultion_operator.cpp
        #        src/y3/s1/cse240/lecs/lec09/input_example1.cpp
        #        src/y3/s1/cse240/lecs/lec11/inheritance_example1.cpp
        #        src/y3/s1/cse240/lecs/lec09/lec09_test1.cpp
        #        src/y3/s1/cse240/lecs/lec09/lec09_test2.cpp
        #        src/y3/s1/cse240/lecs/lec10/lec10.cpp
        #        src/y3/s1/cse240/lecs/lec10/lec10_test1.cpp
        #        src/y3/s1/cse240/revision_midterm.cpp
        #        src/y3/s1/cse240/quizzes/quiz_before_midterm/quiz_before_midterm.c
        #        src/y3/s1/cse240/quizzes/quiz_midterm/quiz_midterm.cpp
        #        src/y3/s1/cse240/lecs/lec11/lec11.cpp
        #        src/y3/s1/cse240/lecs/lec05/lec5_test1.c
        #        src/y3/s1/cse240/lecs/lec05/lec05_test2.c
        #        src/y3/s1/cse240/lecs/lec06/lec06_test1.c
        #        src/y3/s1/cse240/lecs/lec06/lec06_test2.c
        #        src/y3/s1/cse240/lecs/lec07/lec07_test1.c
        #        src/y3/s1/cse240/lecs/lec07/lec07_test2.c
        #        src/y3/s1/cse240/lecs/lec07/lec07_test3.c
        #        src/y3/s1/cse240/lecs/lec08/lec08_test1.c
        #        src/y3/s1/cse240/lecs/lec08/lec08_test2.c
        #        src/y3/s1/cse240/quizzes/quiz1/quiz1.c
        #        src/y3/s1/cse240/quizzes/quiz2/quiz2.c
        #        src/y3/s1/cse240/lecs/Slides/04_chapter_1_program_processing.c
        #    "src/y3/s1/cse240/refs/1.3.3 Orthogonality.c"
        #    "src/y3/s1/cse240/refs/1_3_1 Data types and type equivalence.c"
        #    "src/y3/s1/cse240/refs/1_3_2 Type checking and type conversion.c"
)
